--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -8,4 +8,10 @@
             <directory>tests/unit</directory>
         </testsuite>
     </testsuites>
+
+    <filter>
+        <whitelist>
+            <directory suffix=".php">src</directory>
+        </whitelist>
+    </filter>
 </phpunit>
