composer.json: Add homepage URL

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
       "digits",
       "security"
     ],
+    "homepage": "https://pierrehenry.be",
     "type": "library",
     "license": "MIT",
     "autoload": {
