--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ jobs:
       matrix:
         os: [ ubuntu-latest ]
         php-versions: [ '7.3', '7.4', '8.0', '8.1' ]
-        phpunit-version: '9.5'
+        phpunit-version: [ '9.5' ]
     name: PHP ${{ matrix.php-versions }} Test on ${{ matrix.os }}
 
     steps:
