--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,9 +20,8 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php: ${{ matrix.php-versions }}
-          extensions: mbstring, zip
+          extensions: mbstring
           tools: phpunit:${{ matrix.phpunit-version }}, composer:v2
-          coverage: none
 
       - name: Check PHP Version
         run: php -v
