--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,8 +19,9 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php: ${{ matrix.php-versions }}
+          php-version: ${{ matrix.php-versions }}
           extensions: mbstring
+          coverage: none
           tools: phpunit:${{ matrix.phpunit-version }}, composer:v2
 
       - name: Check PHP Version
