composer.json: Add new keyword

--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "passcode",
     "generator",
     "passcode generator",
+    "password-generator",
     "digit",
     "digits",
     "security"
