--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
 # Exclude dev/testing files from release archives
 /tests export-ignore
 /.github export-ignore
+/media export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
 phpunit.xml.dist export-ignore
